#147 fix overlap on button with tree

--- a/src/assets/stylesheets/sparnatural.scss
+++ b/src/assets/stylesheets/sparnatural.scss
@@ -823,7 +823,7 @@ body {
 						position: absolute;
 						top: 50%;
 						margin-top: -19px;
-						left: calc(100% + 30px);
+						left: calc(100% + 48px);
 						border: 1px solid #ddd;
 						border-radius: 5px;
 						background: #fff;
